[package]
name = "armory_atlas_lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "armory_atlas_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.12.1"
uuid = "1.8.0"
rayon = "1.10.0"
anyhow = { version = "1.0.68", features = ["backtrace"] }
config = { version = "0.14.0", features = ["toml"] }
keyring = { version = "2.3.2", features = ["platform-all"] }
thiserror = { version = "1.0.38" }
clap = { version = "4.0.32", features = ["derive", "usage", "color", "help", "suggestions", "error-context"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
toml = "0.8.12"
sqlx = { version = "0.7.4", features = ["mysql", "macros", "sqlx-mysql", "json", "runtime-tokio", "tls-native-tls", "uuid"] }
sqlx-mysql = { version = "0.7.4", features = ["serde"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros", "full"] }
rpassword = "7.3.1"
rand = "0.8.5"
regex = "1.10.4"
crossterm = "0.27.0"
ratatui = "0.26.2"
tui-textarea = { version =  "0.4.0", features = ["crossterm"] }
pyo3 = { version = "0.21.2", features = ["anyhow", "serde", "auto-initialize"] }

log = "0.4.21"
env_logger = "0.11.3"
chrono = "0.4.38"