[package]
name = "armory_atlas"
version = "0.0.5"
edition = "2021"

[lib]
name = "armory_atlas_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

sqlx = { workspace = true, optional = true }
sqlx-mysql = { workspace = true, optional = true }
tokio = { workspace = true }

rayon = { workspace = true }
keyring = { workspace = true }
itertools = { workspace = true }
config = { workspace = true }
rpassword = { workspace = true }
rand = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }

clap = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
tui-textarea = { workspace = true }

log = { workspace = true }
env_logger = { workspace = true }
chrono = { workspace = true }

pyo3 = { workspace = true }

prettytable-rs = "0.10.0"

[features]
default = []
py-bindings = ["pyo3/extension-module", "pyo3/multiple-pymethods"]
rs-db = ["sqlx", "sqlx-mysql"]
tui = ["rs-db"]
